force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <description>Each meeting planned/scheduled for any given trip for G100 Network MPIC Initiative</description>
    <label>Visit</label>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>