force-app/main/default/objects/Visit__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>Date/time the meeting took place</description>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>