force-app/main/default/objects/Visit__c/fields/Enterprise_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Discussed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was an enterprise opportunity discussed?</description>
    <label>Enterprise Discussed?</label>
    <type>Checkbox</type>
</CustomField>