force-app/main/default/objects/Visit__c/fields/Groups_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Groups_Discussed__c</fullName>
    <label>Groups Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G100</fullName>
            </value>
            <value>
                <fullName>NEXT</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
            <value>
                <fullName>WLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>